<resources>
    <string name="app_name">Scacchiera</string>
    <string name="divisioni">Divisioni</string>
    <string name="segnaposto">Abcd</string>
    <string name="mosse">Mosse</string>
    <string name="vittorie">Vittorie</string>
    <string name="restart">Nuova partita</string>
    <string name="partite">Partite</string>
    <string name="vittoria">Hai vinto in %d mosse!"</string>
</resources>
