<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/divisioni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="1"
            android:id="@+id/seekDivisioni"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/partite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPartite"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/seekDivisioni" android:textStyle="bold"/>
    <TextView
            android:text="@string/vittorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textVittorie" android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textVittorie"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRestart" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/segnaposto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textDivisioni" app:layout_constraintStart_toEndOf="@+id/seekDivisioni"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            android:textStyle="bold"/>
    <view
            android:layout_width="0dp" android:layout_height="0dp"
            class="it.unicampania.lsadm.scacchiera.ScacchieraView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnRestart" android:id="@+id/viewScacchiera"/>
</android.support.constraint.ConstraintLayout>